# neural-condense-subnet

./: .gitignore  README.md  auto_update.sh  pyproject.toml  requirements.txt  setup.py
docs/: elo_ranking.md  mechanism.md  miner.md  minio.md  pm2.md  validator.md
endpoints/miner_backend/serving/: app.py  download_checkpoint.sh  icae_app.py
endpoints/validator_backend/scoring/: app.py  utils.py
neural_condense_core/: __init__.py  constants.py  executor.py  logger.py  protocol.py
neural_condense_core/base/: __init__.py  config.py  miner.py  validator.py
neural_condense_core/common/: __init__.py  base64.py  file.py  rate_limit.py
neural_condense_core/miner_utils/: __init__.py  rate_limit_counter.py
neural_condense_core/validator_utils/: __init__.py  elo.py  forward.py  logging.py  metric_converter.py  miner_manager.py  organic_gate.py  synthetic_challenge.py
neural_condense_core/validator_utils/custom_dataset_loaders/: __init__.py  open_hermes_2dot5.py  open_infinity_instruct.py  open_math_instruct.py  qa.py  qa_zre.py
neural_condense_core/validator_utils/loop/: __init__.py  forward.py  logging.py
neural_condense_core/validator_utils/managing/: __init__.py  elo.py  metric_converter.py  miner_manager.py  utils.py
neurons/: miner.py  validator.py
product_api/: __init__.py  subnet_llm_adapter.py
scripts/: enable_hf_transfer.sh  install_redis.sh
services/miner_backend/: app.py  object_cleaner.py  universal_app.py  utils.py
tests/: test_miner_backend.py  test_synthesizer.py  test_synthetic.py  upload_synthetic_dataset.py
(+29 files in other folders)
